--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "web": "vite"
+    "web": "vite",
+    "server": "node --watch .\\server\\index.js"
   },
   "devDependencies": {
     "vite": "^5.1.0"
+  },
+  "dependencies": {
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "ytdl-core": "4.10.0"
   }
 }
