--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "vite": "^5.1.0"
   },
   "dependencies": {
+    "@xenova/transformers": "^2.15.0",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "node-wav": "^0.0.2",
     "ytdl-core": "4.10.0"
   }
 }
